tests/test_programs/errors/use_after_move.cm
// Move Semantics エラーテスト: 移動後の直接使用
// 期待: コンパイルエラー "Variable 's' used after move"
int main() {
    int x = 42;
    int y = move x;  // 所有権をyへ移動
    int z = x;       // エラー: xは既にmove済み
    return z;
}
